--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-</head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>Smells Like Bakin' Cupcake Company</title>
   <link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen">
 </head>
 <body>
-	<img src="img/logo.gif" alt="Smells Like Bakin"> 
+	
+  <img src="cupcakes/logo.gif" alt="Smells Like Bakin"> 
+
 	<ul class="nav">
 		<li><a href="#">About</a></li>
 		<li><a href="#">Cupcakes &amp; Prices</a></li>
@@ -20,7 +21,7 @@
 		<p><a href="#" class="btn">Browse Our Cupcakes</a></p>
 		</div>
 
-		<img src="img/you-bake-me-blush.gif" alt="You Bake Me Blush">
+		<img src="cupcakes/img/you-bake-me-blush.gif" alt="You Bake Me Blush">
     <div id="featured-cupcake">
       <h2>Cupcake of the Week<h2>
         <p>This week's featured cupcake is the <a href="#">Avocado Chocolate Cupcake</a>. It's a strange combo of flavors that will kick your taste buds into fiesta mode!</p>
