--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	
-  <img src="cupcakes/logo.gif" alt="Smells Like Bakin"> 
+  <img src="img/logo.gif" alt="Smells Like Bakin"> 
 
 	<ul class="nav">
 		<li><a href="#">About</a></li>
