--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<p><a href="#" class="btn">Browse Our Cupcakes</a></p>
 		</div>
 
-		<img src="cupcakes/img/you-bake-me-blush.gif" alt="You Bake Me Blush">
+		<img src="./img/you-bake-me-blush.gif" alt="You Bake Me Blush">
     <div id="featured-cupcake">
       <h2>Cupcake of the Week<h2>
         <p>This week's featured cupcake is the <a href="#">Avocado Chocolate Cupcake</a>. It's a strange combo of flavors that will kick your taste buds into fiesta mode!</p>
