--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen">
 </head>
 <body>
-	<div class="container">
-    <img src="img/logo.gif" alt="Smells Like Bakin"> 
-
+	<div class="container clearfix">
+    <div class="grid_4">
+      <img src="img/logo.gif" alt="Smells Like Bakin"> 
+    </div>
   	<ul class="nav">
   		<li><a href="#">About</a></li>
   		<li><a href="#">Cupcakes &amp; Prices</a></li>
@@ -52,7 +53,7 @@
       <div id="copyright">
         <p>&copy; 2012 Smells Like Bakin' Cupcake Company. All Rights Reserved.</p>
       </div>
-    
+
   </div>
 </body>
 </html>
