--- a/index.html
+++ b/index.html
@@ -11,30 +11,36 @@
     <div class="grid_4">
       <img src="img/logo.gif" alt="Smells Like Bakin"> 
     </div>
-  	<ul class="nav">
-  		<li><a href="#">About</a></li>
-  		<li><a href="#">Cupcakes &amp; Prices</a></li>
-  		<li><a href="#">Locations</a></li>
-  		<li class="last"><a href="#">Contact Us</a></li>
-  	</ul>
-  	<div id="intro">
+    <div class="grid_8 omega">
+      	<ul class="nav">
+      		<li><a href="#">About</a></li>
+      		<li><a href="#">Cupcakes &amp; Prices</a></li>
+      		<li><a href="#">Locations</a></li>
+      		<li class="last"><a href="#">Contact Us</a></li>
+      	</ul>
+  </div>
+  	<div id="intro" class="grid_9">
   		<h1>Opposites really do attract, especially in our kitchen! We combine unexpected flavors that melt together to create ironically delicious desserts.
   		</h1>
   		<p><a href="#" class="btn">Browse Our Cupcakes</a></p>
   		</div>
+      <div class="grid_3">
+  		  <img src="./img/you-bake-me-blush.gif" alt="You Bake Me Blush">
+      </div>
 
-  		<img src="./img/you-bake-me-blush.gif" alt="You Bake Me Blush">
-      <div id="featured-cupcake">
+      <div id="featured-cupcake" class="grid_7">
         <h2>Cupcake of the Week<h2>
           <p>This week's featured cupcake is the <a href="#">Avocado Chocolate Cupcake</a>. It's a strange combo of flavors that will kick your taste buds into fiesta mode!</p>
           <img src="img/featured-cupcake.jpg" alt="Avocado Chocolate Cupcake">
         </div>
-    <div id="new-cupcakes">
-      <h2>Fresh Out the Oven<h2>
-        <p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeno So Spicy</a>. </p>
-        <img src="img/new-cupcake-bacon.jpg" alt="Bacon me Crazy">
-        <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
-      </div>
+
+
+      <div id="new-cupcakes" class="gird_5 omega">
+          <h2>Fresh Out the Oven<h2>
+            <p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeno So Spicy</a>. </p>
+            <img src="img/new-cupcake-bacon.jpg" alt="Bacon me Crazy">
+            <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
+          </div>
 
       <h2>Inside the Kitchen</h2>
       <p>Smells Like Bakin' started out in the garage of the husban wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
