--- a/index.html
+++ b/index.html
@@ -42,21 +42,25 @@
             <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
           </div>
 
-      <h2>Inside the Kitchen</h2>
-      <p>Smells Like Bakin' started out in the garage of the husban wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
-      <p><a href="#" class="btn-small">Read More</a></p>
-
-      <h2>Get Bakin' With Us</h2>
-
-      <div id="contact">
-        <p>Call us: <span>1-555-CUP-CAKE</span><br>
-          Email us: <a href="#">bakeon@smellslikebakin.com</a></p>
+      <div class="grid_7">
+          <h2>Inside the Kitchen</h2>
+          <p>Smells Like Bakin' started out in the garage of the husban wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
+          <p><a href="#" class="btn-small">Read More</a></p>
       </div>
-      <p>We announce all of our new flavors first through Facebook &amp; Twitter, and even take requests!</p>
-      <a href="http://www.facebook.com/SmellsLikeBakin"><img src="img/facebook.gif" alt="Facebook"></a>
-      <a href="http://www.twitter.com/#!/smellslikebakin"><img src="img/twitter.gif" alt="Twitter"></a>
 
-      <div id="copyright">
+      <div class="grid_5 omega">
+          <h2>Get Bakin' With Us</h2>
+
+          <div id="contact">
+            <p>Call us: <span>1-555-CUP-CAKE</span><br>
+              Email us: <a href="#">bakeon@smellslikebakin.com</a></p>
+          </div>
+          <p>We announce all of our new flavors first through Facebook &amp; Twitter, and even take requests!</p>
+          <a href="http://www.facebook.com/SmellsLikeBakin"><img src="img/facebook.gif" alt="Facebook"></a>
+          <a href="http://www.twitter.com/#!/smellslikebakin"><img src="img/twitter.gif" alt="Twitter"></a>
+        </div>
+
+      <div id="copyright" class="grid_12">
         <p>&copy; 2012 Smells Like Bakin' Cupcake Company. All Rights Reserved.</p>
       </div>
 
