--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="grid_7">
           <h2>Inside the Kitchen</h2>
-          <p>Smells Like Bakin' started out in the garage of the husban wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
+          <p>Smells Like Bakin' started out in the garage of the husband wife duo Allison &amp; Joseph. Allison is the baker, and Joseph found a way for them to make a business out of her tasty treats. Flash forward to today and they have a successful store front, catering business and cupcake truck. </p>
           <p><a href="#" class="btn-small">Read More</a></p>
       </div>
 
