Fixed headline mistakes

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
       </div>
 
       <div id="featured-cupcake" class="grid_7">
-          <h2>Cupcake of the Week<h2>
+          <h2>Cupcake of the Week</h2>
           <p>This week's featured cupcake is the <a href="#">Avocado Chocolate Cupcake</a>. It's a strange combo of flavors that will kick your taste buds into fiesta mode!</p>
           <img src="img/featured-cupcake.jpg" alt="Avocado Chocolate Cupcake">
       </div>
 
 
       <div id="new-cupcakes" class="gird_5 omega">
-            <h2>Fresh Out the Oven<h2>
+            <h2>Fresh Out the Oven</h2>
             <p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeno So Spicy</a>. </p>
             <img src="img/new-cupcake-bacon.jpg" alt="Bacon me Crazy">
             <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
