Fixed Spelling mistake

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </div>
 
 
-      <div id="new-cupcakes" class="gird_5 omega">
-            <h2>Fresh Out the Oven</h2>
-            <p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeno So Spicy</a>. </p>
-            <img src="img/new-cupcake-bacon.jpg" alt="Bacon me Crazy">
-            <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
+      <div id="new-cupcakes" class="grid_5 omega">
+          <h2>Fresh Out the Oven</h2>
+          <p>Our newest cupcakes are <a href="#">Bacon Me Crazy</a> and <a href="#">Jalapeno So Spicy</a>. </p>
+          <img src="img/new-cupcake-bacon.jpg" alt="Bacon me Crazy">
+          <img src="img/new-cupcake-jalapeno.jpg" alt="Jalapeno So Spicy">
       </div>
 
       <div class="grid_7">
